--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 
 <!--Inicio-->
     <!--Navbar-->
-    Hola, mundo
+    
     <!--Header-->
 
-    <!--Seccion-->
+    <!--Seccion presentación-->
 
-    <!--Seccion2-->
+    <!--Seccion destacados-->
 
+    <!--Formulario de contacto-->
 
-    <!--Footer-->
+    <!--Footer con redes sociales-->
 
     <!--Popper-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
