--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Autor-->
     <meta name="author" content="Leslie Schmied">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="revised" content="">
+    <meta name="keywords" content="viajes, Chile">
+    <meta name="description" content="Página con información turística sobre Chile">
+    <meta name="revised" content="11/04/2022">
     <!--Título página-->
-    <title>Document</title>
+    <title>Viajes por Chile</title>
     <!--Favicon-->
-    <link rel="icon" href="..." type="png"/>
+    <link rel="icon" href="./assets/img/viajes.svg" type="svg"/>
 
     <!--Google fonts (Reemplazar)-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="/assets/css/style.css" >
+    <link rel="stylesheet" href="./assets/css/style.css" >
     
     <!--Bootstrap 5 CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
